                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 12-07-2006 fixed: HttpApi GetCurrentlyPlaying so it again returns playing state
 - 12-07-2006 added: HttpApi FileUpload can now take an optional third parameter (first, continue, last) to allow large files to be uploaded in multiple chunks
 - 11-07-2006 fixed: XBMC mapped to Log message
 - 11-07-2006 fixed: masked directory listings in rars where broken
 - 11-07-2006 changed: header file cleanup and sectioned of time server client
 - 11-07-2006 changed: recompiled release rar lib without debug information to avoid all warnings about missing debug information during build
 - 11-07-2006 fixed: python sounds where broken
 - 11-07-2006 fixed: fribidi flipping was done both by mplayer and by gui when using ttf fonts
 - 11-07-2006 changed: subtitle conversion to utf is now disabled if user is using mplayer fonts. 
 - 11-07-2006 fixed: samba default username/password wasn't being applied in all cases
 - 10-07-2006 changed: listcontrol onup/ondown is now respected. set them to listcontrols own id for old wraparound behavior. ( they are now the same as thumbpanels )
 - 10-07-2006 fixed: top part of ttf subtitles (hyphens and such) would get cut of in some sizes
 - 10-07-2006 added: sorting on listener count and bitrate for shoutcast directory
 - 10-07-2006 changed: subs are now in utf8 encoding. conversion is done at render time.
 - 10-07-2006 fixed: [ 1519293 ] Hide file extensions appears to affect (certain) directories
 - 10-07-2006 fixed: autostart of audio discs (mp3...) was not working